--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 	</div>
 	
 	<div class="map-content">
-		<img src="images/map.jpg" alt="Map">
+		<img src="images/map.JPG" alt="Map">
 	</div>
 	
 		<div class="contact-form-content">
