--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<a class="nav-link text-uppercase" href="#wedo-content">About Us</a>
 			</li>
 			<li class="nav-item">
-			<a class="nav-link text-uppercase" href="#wood-types-content container">Services</a>
+			<a class="nav-link text-uppercase" href="#wood-types-content">Services</a>
 			</li>
 			<li class="nav-item">
 			<a class="nav-link text-uppercase" href="#contact-form-content">Contact</a>
@@ -97,30 +97,32 @@
 		</div>
 	</div>
 	
-	<div class="wood-types-content container" id="wood-types-content container">
-		<div class="types-header">
-			<h3 class="text-uppercase text-center">Types of wood</h3>
+	<div class="wood-types-content" id="wood-types-content">
+		<div class="container">
+			<div class="types-header">
+				<h3 class="text-uppercase text-center">Types of wood</h3>
+			</div>
+			<div class="row">
+			  <div class="col-lg-4 text-center">
+				<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+				<h2>Heading</h2>
+				<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+				<p><a class="btn btn-secondary" href="#" role="button">View details </a></p>
+			  </div><!-- /.col-lg-4 -->
+			  <div class="col-lg-4 text-center">
+				<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+				<h2>Heading</h2>
+				<p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+				<p><a class="btn btn-secondary" href="#" role="button">View details</a></p>
+			  </div><!-- /.col-lg-4 -->
+			  <div class="col-lg-4 text-center">
+				<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+				<h2>Heading</h2>
+				<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+				<p><a class="btn btn-secondary" href="#" role="button">View details</a></p>
+			  </div><!-- /.col-lg-4 -->
+			</div>
 		</div>
-		<div class="row">
-          <div class="col-lg-4 text-center">
-            <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details </a></p>
-          </div><!-- /.col-lg-4 -->
-          <div class="col-lg-4 text-center">
-            <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-            <h2>Heading</h2>
-            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details</a></p>
-          </div><!-- /.col-lg-4 -->
-          <div class="col-lg-4 text-center">
-            <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details</a></p>
-          </div><!-- /.col-lg-4 -->
-        </div>
 	</div>
 	
 	<div class="map-content">
@@ -146,7 +148,7 @@
 						<label for="exampleTextarea">Example textarea</label>
 						<textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
 					</div>
-				<button type="submit" class="btn btn-primary float-right">Submit</button>
+				<button type="submit" class="btn btn-success float-right">Submit</button>
 				</form>
 			</div>
 			<div class="col-md-3">
