add logo vector

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="navigation-content" id="navigation-content">
 		<nav class="navbar navbar-expand-lg  navbar-light  fixed-top bg-light">
-			<img src="images/logo-sm.jpg" alt="Logo">
+			<img src="images/logo_sm.png" alt="Logo">
 			<a class="navbar-brand logo-img" href="#"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation" style="">
 			<span class="navbar-toggler-icon"></span>
