--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Mehran</title>
-	<link href="styles/bootstrap.min.css" rel="stylesheet">
+	<!-- <link href="styles/bootstrap.min.css" rel="stylesheet"> -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="styles/style.css">
 
@@ -13,37 +13,36 @@
 </head>
 
 <body>
-	<div class="navigation-content" id="navigation-content">
-		<nav class="navbar navbar-expand-lg  navbar-light  fixed-top bg-light">
-			<img src="images/logo_sm.png" alt="Logo">
-			<a class="navbar-brand logo-img" href="#"></a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation" style="">
-			<span class="navbar-toggler-icon"></span>
-			</button>
+	<div class="navigation-content container">
+	      <!-- Static navbar -->
+	      <nav class="navbar navbar-light">
+	        <div class="container-fluid">
+	          <div class="navbar-header">
+	            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+	              <span class="sr-only">Toggle navigation</span>
+	              <span class="icon-bar"></span>
+	              <span class="icon-bar"></span>
+	              <span class="icon-bar"></span>
+	            </button>
+	            <a href="#"><img src="images/logo_sm.png" class="img-responsive" alt="Logo"></a>
+	          </div>
+	          <div id="navbar" class="menu navbar-collapse collapse">
+	            <ul class="nav navbar-nav">
+	              <li class="active"><a href="#">Home</a></li>
+	              <li><a href="#">About Us</a></li>
+	              <li><a href="#">Services</a></li>
+	              <li><a href="#">Contact</a></li>
+	            </ul>
+	            <ul class="nav navbar-nav navbar-right">
+	              <li class="active"><a href="./"><img src="images/gb.png" alt="Logo"><span class="sr-only">(current)</span></a></li>
+	              <li><a href="../navbar-static-top/"><img src="images/est.png" alt="Logo"></a></li>
+	              <li><a href="../navbar-fixed-top/"><img src="images/ru.png" alt="Logo"></a></li>
+	            </ul>
+	          </div><!--/.nav-collapse -->
+	        </div><!--/.container-fluid -->
+	      </nav>
 
-			<div class="collapse navbar-collapse" id="navbarColor03">
-			<ul class="navbar-nav mr-auto">
-			<li class="nav-item active">
-			<a class="nav-link text-uppercase" href="#"navigation-content>Home <span class="sr-only">(current)</span></a>
-			</li>
-			<li class="nav-item">
-			<a class="nav-link text-uppercase" href="#wedo-content">About Us</a>
-			</li>
-			<li class="nav-item">
-			<a class="nav-link text-uppercase" href="#wood-types-content">Services</a>
-			</li>
-			<li class="nav-item">
-			<a class="nav-link text-uppercase" href="#contact-form-content">Contact</a>
-			</li>
-			</ul>
-			</div>
-			<div class="lngs">
-			<button type="button" class="btn btn-light">EN</button>
-			<button type="button" class="btn btn-light">EE</button>
-			<button type="button" class="btn btn-light">RU</button>
-			</div>
-		</nav>	
-	</div>
+	    </div>
 	<div class="slider-content">
 		<div class="container">
 			<!-- <h2>Carousel Example</h2>   -->
@@ -125,36 +124,48 @@
 		</div>
 	</div>
 	
-	<div class="map-content">
-		<img src="images/map.JPG" alt="Map">
-	</div>
-	
-	<div class="contact-form-content" id="contact-form-content">
+	<div class="contact-form-content">
 		<div class="types-header">
-		<h3 class="text-uppercase text-center">Contact form</h3>
+			<div class="row">
+				<div class="col-md-12">					
+					<h3 class="text-uppercase text-center">Contact form</h3>
+				</div>
+			</div>
 		</div>
 		<div class="row">
-		<div class="col-md-3">
-		</div>
-			<div class="col-md-6">
-
-				<form>
-					<div class="form-group">
-					<label for="exampleInputEmail1">Email address</label>
-					<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-					<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-					</div>
-					<div class="form-group">
-						<label for="exampleTextarea">Example textarea</label>
-						<textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
-					</div>
-				<button type="submit" class="btn btn-success float-right">Submit</button>
-				</form>
+			<div class="col-md-6 map">
+				<img src="images/maps_routemap.png" class="img-responsive" alt="Map">
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-6 c-form">
+				<div class="row">
+					<div class="col-md-3">
+					</div>
+						<div class="col-md-6">
+							<form>
+								<div class="form-group">
+									<label for="exampleInputName">Name</label>
+									<input type="email" class="form-control" id="exampleInputName" aria-describedby="emailHelp" placeholder="Enter name">
+								</div>
+								<div class="form-group">
+									<label for="exampleInputEmail1">Email address</label>
+									<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">								
+								</div>
+								<div class="form-group">
+									<label for="exampleTextarea">Example textarea</label>
+									<textarea class="form-control" id="exampleTextarea" rows="8"></textarea>
+								</div>
+							<button type="submit" class="btn btn-success float-right">Submit</button>
+							</form>
+						</div>
+						<div class="col-md-3">
+					</div>
+				</div>
+			</div>
 		</div>
-		</div>
+
 	</div>
+	
+
 	
 	<div class="footer-content">
 	<hr>
