--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="navigation-content container">
 	      <!-- Static navbar -->
-	      <nav class="navbar navbar-light">
+	      <nav class="navbar navbar-light fixed-top menu-color">
 	        <div class="container-fluid">
 	          <div class="navbar-header">
 	            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -34,15 +34,15 @@
 	              <li><a href="#">Contact</a></li>
 	            </ul>
 	            <ul class="nav navbar-nav navbar-right">
-	              <li class="active"><a href="./"><img src="images/gb.png" alt="Logo"><span class="sr-only">(current)</span></a></li>
-	              <li><a href="../navbar-static-top/"><img src="images/est.png" alt="Logo"></a></li>
-	              <li><a href="../navbar-fixed-top/"><img src="images/ru.png" alt="Logo"></a></li>
+	              <li class="active"><a href="./"><img src="images/gb.png" alt="en"><span class="sr-only">(current)</span></a></li>
+	              <li><a href="../navbar-static-top/"><img src="images/est.png" alt="ee"></a></li>
+	              <li><a href="../navbar-fixed-top/"><img src="images/ru.png" alt="ru"></a></li>
 	            </ul>
 	          </div><!--/.nav-collapse -->
 	        </div><!--/.container-fluid -->
 	      </nav>
+	</div>
 
-	    </div>
 	<div class="slider-content">
 		<div class="container">
 			<!-- <h2>Carousel Example</h2>   -->
@@ -83,17 +83,22 @@
 	</div>
 	
 	<div class="wedo-content" id="wedo-content">
-		<div class="container">
+		<div class="container wood-color">
 			<div class="row">
-			<div class="col-md-7">
-			<h2 class="featurette-heading text-center">What we do</h2>
-			<p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-			</div>
-			<div class="col-md-5">
-			<img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="500x500" style="width: 500px; height: 500px;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22500%22%20height%3D%22500%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20500%20500%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1628c030b53%20text%20%7B%20fill%3A%23AAAAAA%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A25pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1628c030b53%22%3E%3Crect%20width%3D%22500%22%20height%3D%22500%22%20fill%3D%22%23EEEEEE%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22185.125%22%20y%3D%22261.1%22%3E500x500%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
-			</div>
+				<div class="col-md-6">
+					<h2 class="featurette-heading text-center">What we do</h2>
+					<p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+					<div class="float-r">
+						<button type="button" class="btn btn-primary">Read more</button>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<!-- <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="500x500" style="width: 500px; height: 500px;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22500%22%20height%3D%22500%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20500%20500%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1628c030b53%20text%20%7B%20fill%3A%23AAAAAA%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A25pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1628c030b53%22%3E%3Crect%20width%3D%22500%22%20height%3D%22500%22%20fill%3D%22%23EEEEEE%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22185.125%22%20y%3D%22261.1%22%3E500x500%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true"> -->
+					<img src="images/wedo.jpg" alt="">
+				</div>
 			</div>
 		</div>
+
 	</div>
 	
 	<div class="wood-types-content" id="wood-types-content">
@@ -103,28 +108,28 @@
 			</div>
 			<div class="row">
 			  <div class="col-lg-4 text-center">
-				<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+				<img class="img-circle" src="images/woods.jpg" alt="Generic placeholder image" width="140" height="140">
 				<h2>Heading</h2>
 				<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
 				<p><a class="btn btn-secondary" href="#" role="button">View details </a></p>
 			  </div><!-- /.col-lg-4 -->
 			  <div class="col-lg-4 text-center">
-				<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+				<img class="img-circle" src="images/woods.jpg" alt="Generic placeholder image" width="140" height="140">
 				<h2>Heading</h2>
-				<p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+				<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
 				<p><a class="btn btn-secondary" href="#" role="button">View details</a></p>
 			  </div><!-- /.col-lg-4 -->
 			  <div class="col-lg-4 text-center">
-				<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+				<img class="img-circle" src="images/woods.jpg" alt="Generic placeholder image" width="140" height="140">
 				<h2>Heading</h2>
-				<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+				<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
 				<p><a class="btn btn-secondary" href="#" role="button">View details</a></p>
 			  </div><!-- /.col-lg-4 -->
 			</div>
 		</div>
 	</div>
 	
-	<div class="contact-form-content">
+	<div class="contact-form-content container wood-color">
 		<div class="types-header">
 			<div class="row">
 				<div class="col-md-12">					
@@ -138,27 +143,31 @@
 			</div>
 			<div class="col-md-6 c-form">
 				<div class="row">
-					<div class="col-md-3">
-					</div>
-						<div class="col-md-6">
+					<!-- <div class="col-md-3">
+					</div> -->
+						<div class="col-md-12">
 							<form>
 								<div class="form-group">
 									<label for="exampleInputName">Name</label>
-									<input type="email" class="form-control" id="exampleInputName" aria-describedby="emailHelp" placeholder="Enter name">
+									<input type="email" class="form-control" id="exampleInputName" aria-describedby="name" placeholder="Enter name">
 								</div>
 								<div class="form-group">
 									<label for="exampleInputEmail1">Email address</label>
-									<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">								
+									<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="email" placeholder="Enter email">								
+								</div>
+								<div class="form-group">
+									<label for="exampleInputSubject">Subject</label>
+									<input type="email" class="form-control" id="exampleInputSubject" aria-describedby="subject" placeholder="Enter email">								
 								</div>
 								<div class="form-group">
 									<label for="exampleTextarea">Example textarea</label>
-									<textarea class="form-control" id="exampleTextarea" rows="8"></textarea>
+									<textarea class="form-control" id="exampleTextarea" rows="4"></textarea>
 								</div>
-							<button type="submit" class="btn btn-success float-right">Submit</button>
+								<button type="submit" class="btn btn-success float-r">Submit</button>
 							</form>
 						</div>
-						<div class="col-md-3">
-					</div>
+					<!-- 	<div class="col-md-3">
+						</div> -->
 				</div>
 			</div>
 		</div>
@@ -168,112 +177,71 @@
 
 	
 	<div class="footer-content">
-	<hr>
 		<!--Footer-->
 	<footer class="page-footer font-small stylish-color-dark pt-4 mt-4">
 
 		<!--Footer Links-->
-		<div class="container text-center text-md-left">
-			<div class="row">
+		<div class="container text-md-left ">
+			<div class="row footer-navigation">
 
 				<!--First column-->
 				<div class="col-md-4">
 					<!-- <h5 class="text-uppercase mb-4 mt-3 font-weight-bold">Footer Content</h5> -->
-					<img src="images/logo-sm.jpg" alt="Logo">
-					<p>Here you can use rows and columns here to organize your footer content. Lorem ipsum dolor sit
-						amet, consectetur adipisicing elit.</p>
+					<img src="images/logo_sm.png" class="img-responsive" alt="Logo">
+			<!-- 		<p>Here you can use rows and columns here to organize your footer content. Lorem ipsum dolor sit
+						amet, consectetur adipisicing elit.</p> -->
 				</div>
-				<!--/.First column-->
-
-				<hr class="clearfix w-100 d-md-none">
-
-				<!--Second column-->
-				<div class="col-md-2 mx-auto">
-					<h5 class="text-uppercase mb-4 mt-3 font-weight-bold">Links</h5>
+				<div class="col-md-2">
+					<a class="footer-nav-h" href="#!">Home</a>
 					<ul class="list-unstyled">
 						<li>
-							<a href="#!">Link 1</a>
+							<a href="#!">Link</a>
 						</li>
 						<li>
-							<a href="#!">Link 2</a>
-						</li>
-						<li>
-							<a href="#!">Link 3</a>
-						</li>
-						<li>
-							<a href="#!">Link 4</a>
+							<a href="#!">Link</a>
 						</li>
 					</ul>
 				</div>
-				<!--/.Second column-->
-
-				<hr class="clearfix w-100 d-md-none">
-
-				<!--Third column-->
-				<div class="col-md-2 mx-auto">
-					<h5 class="text-uppercase mb-4 mt-3 font-weight-bold">Links</h5>
-					<ul class="list-unstyled">
-						<li>
-							<a href="#!">Link 1</a>
-						</li>
-						<li>
-							<a href="#!">Link 2</a>
-						</li>
-						<li>
-							<a href="#!">Link 3</a>
-						</li>
-						<li>
-							<a href="#!">Link 4</a>
-						</li>
-					</ul>
+				<div class="col-md-2">
+					<a  class="footer-nav-h" href="#!">About Us</a>
+						<ul class="list-unstyled">
+							<li>
+								<a href="#!">Link</a>
+							</li>
+							<li>
+								<a href="#!">Link</a>
+							</li>
+						</ul>
 				</div>
-				<!--/.Third column-->
-
-				<hr class="clearfix w-100 d-md-none">
-
-				<!--Fourth column-->
-				<div class="col-md-2 mx-auto">
-					<h5 class="text-uppercase mb-4 mt-3 font-weight-bold">Site map</h5>
-					<ul class="list-unstyled">
-						<li>
-							<a href="#!">Link 1</a>
-						</li>
-						<li>
-							<a href="#!">Link 2</a>
-						</li>
-						<li>
-							<a href="#!">Link 3</a>
-						</li>
-						<li>
-							<a href="#!">Link 4</a>
-						</li>
-					</ul>
+				<div class="col-md-2">
+					<a  class="footer-nav-h" href="#!">Services</a>
+						<ul class="list-unstyled">
+							<li>
+								<a href="#!">Link</a>
+							</li>
+							<li>
+								<a href="#!">Link</a>
+							</li>
+						</ul>
 				</div>
-				<!--/.Fourth column-->
+				<div class="col-md-2">
+					<a  class="footer-nav-h" href="#!">Contact</a>
+						<ul class="list-unstyled">
+							<li>
+								<a href="#!">Link</a>
+							</li>
+							<li>
+								<a href="#!">Link</a>
+							</li>
+						</ul>
+				</div>
 			</div>
 		</div>
 		<!--/.Footer Links-->
 
-		<hr>
-
-		<!--Call to action-->
-		<div class="text-center py-3">
-		<h3 class="text-uppercase">Subscribe for news!</h3>
-			<ul class="list-unstyled list-inline mb-0">
-			<!-- 	<li class="list-inline-item">
-					<h5 class="mb-1">Subscribe for news!</h5>
-				</li> -->
-				<li class="list-inline-item">
-					<a href="#!" class="btn btn-danger btn-rounded">Subscribe</a>
-				</li>
-			</ul>
-		</div>
-		<!--/.Call to action-->
-
-		<hr>
 
 		<!--Copyright-->
-		<div class="footer-copyright py-3 text-center">
+		<div class="footer-copyright py-3 text-center wood-color footer-style">
 			© 2018 Copyright:
 			<a href="https://mdbootstrap.com/material-design-for-bootstrap/">Bootstrap.com </a>
 		</div>
