--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	</div>
 
 	<div class="slider-content">
-		<div class="container">
+		<div class="container no-padding">
 			<!-- <h2>Carousel Example</h2>   -->
 			<div id="myCarousel" class="carousel slide" data-ride="carousel">
 			<!-- Indicators -->
@@ -239,7 +239,7 @@
 		</div>
 		<!--/.Footer Links-->
 
-
+		
 		<!--Copyright-->
 		<div class="footer-copyright py-3 text-center wood-color footer-style">
 			© 2018 Copyright:
