--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="navigation-content container">
 	      <!-- Static navbar -->
-	      <nav class="navbar navbar-light fixed-top menu-color">
+	      <nav class="navbar navbar-light  fixed-top menu-color">
 	        <div class="container-fluid">
 	          <div class="navbar-header">
 	            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -236,15 +236,23 @@
 						</ul>
 				</div>
 			</div>
+			<div class="footer-copyright py-3  wood-color row footer-style">
+				<!-- <div class=""> -->
+					<!-- <div class="col-md-4"></div>			 -->
+					<div class="col-md-12 text-center">
+						© 2018 Copyright:
+						<a href="https://mdbootstrap.com/material-design-for-bootstrap/">Bootstrap.com </a>
+					</div>
+					<!-- <div class="col-md-4"></div> -->
+				<!-- </div> -->
+				
+			</div>
 		</div>
 		<!--/.Footer Links-->
 
 		
 		<!--Copyright-->
-		<div class="footer-copyright py-3 text-center wood-color footer-style">
-			© 2018 Copyright:
-			<a href="https://mdbootstrap.com/material-design-for-bootstrap/">Bootstrap.com </a>
-		</div>
+
 		<!--/.Copyright-->
 
 	</footer>
