--- a/index.html
+++ b/index.html
@@ -13,16 +13,13 @@
 </head>
 
 <body class="bg">
-	<div class="navigation-content container">
+	<div class="navigation-content ">
 	      <!-- Static navbar -->
-	      <nav class="navbar navbar-light  fixed-top menu-color">
+	      <nav class="navbar navbar-light container  fixed-top menu-color navbar-fixed-top">
 	        <div class="container-fluid">
 	          <div class="navbar-header">
-	            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-	              <span class="sr-only">Toggle navigation</span>
-	              <span class="icon-bar"></span>
-	              <span class="icon-bar"></span>
-	              <span class="icon-bar"></span>
+	            <button type="button" class="navbar-toggle collapsed menu-btn" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+	              <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
 	            </button>
 	            <a href="#"><img src="images/logo_sm.png" class="img-responsive" alt="Logo"></a>
 	          </div>
@@ -88,7 +85,7 @@
 				<div class="col-md-6 col-lg-6">
 				<div class="row">
 					<div class="col-md-12">
-						<h2 class="featurette-heading text-center">What we do</h2>
+						<h3 class="featurette-heading text-center text-uppercase header-style">What we do</h3>
 						<p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
 					</div>
 					<div class="col-md-12"> <!-- Ispavit -->
@@ -107,7 +104,7 @@
 	
 	<div class="wood-types-content" id="wood-types-content">
 		<div class="container">
-			<div class="types-header">
+			<div class="header-style">
 				<h3 class="text-uppercase text-center">Types of wood</h3>
 			</div>
 			<div class="row">
@@ -115,26 +112,26 @@
 				<img class="img-circle" src="images/woods.jpg" alt="Generic placeholder image" width="140" height="140">
 				<h2>Heading</h2>
 				<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-				<button type="button" class="btn btn-primary">View details</button>
+				<button type="button" class="btn btn-primary">View details  <span aria-hidden="true">&raquo;</span></button>
 			  </div><!-- /.col-lg-4 -->
 			  <div class="col-lg-4 text-center types-styles">
 				<img class="img-circle" src="images/woods.jpg" alt="Generic placeholder image" width="140" height="140">
 				<h2>Heading</h2>
 				<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-				<button type="button" class="btn btn-primary">View details</button>
+				<button type="button" class="btn btn-primary">View details  <span aria-hidden="true">&raquo;</span></button>
 			  </div><!-- /.col-lg-4 -->
 			  <div class="col-lg-4 text-center types-styles">
 				<img class="img-circle" src="images/woods.jpg" alt="Generic placeholder image" width="140" height="140">
 				<h2>Heading</h2>
 				<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-				<button type="button" class="btn btn-primary">View details</button>
+				<button type="button" class="btn btn-primary">View details  <span aria-hidden="true">&raquo;</span></button>
 			  </div><!-- /.col-lg-4 -->
 			</div>
 		</div>
 	</div>
 	
 	<div class="contact-form-content container wood-color">
-		<div class="types-header">
+		<div class="header-style">
 			<div class="row">
 				<div class="col-md-12">					
 					<h3 class="text-uppercase text-center">Contact form</h3>
